--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Главная	</HeaderLink>
-			<HeaderLink href="/blog">Блог</HeaderLink>
-			<HeaderLink href="/about">О авторе</HeaderLink>
+			<HeaderLink href="/new-blog-prabhupada/index/">Главная</HeaderLink>
+			<HeaderLink href="/new-blog-prabhupada/blog/index/">Блог</HeaderLink>
+			<HeaderLink href="/new-blog-prabhupada/about/">О авторе</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
