ccdbew bulde push3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Добро пожаловать!</h1>
+			<h1>Добро пожаловать дорогой друг!</h1>
 			<p>
 			Если Вы здесь, значит у Вас есть очень важные вопросы:
 			</p>
