--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</ul>
 			<p>
 				Шрила Прабхупада дас Вам ответ
-				</a> в нашем  <a href="/blog">блоге</a>.
+				</a> в нашем  <a href="/new-blog-prabhupada/blog">блоге</a>.
 			</p>
 			<p>
 				Если, Вы не нашли ответа? Можете задать их в чате <a
