--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/new-blog-prabhupada/">Главная</HeaderLink>
 			<HeaderLink href="/new-blog-prabhupada/blog/">Блог</HeaderLink>
-			<HeaderLink href="/new-blog-prabhupada/">О авторе</HeaderLink>
+			<HeaderLink href="/new-blog-prabhupada/about/">О авторе</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
