--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<h2><a href="/new-blog-prabhupada/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/new-blog-prabhupada/">Главная</HeaderLink>
 			<HeaderLink href="/new-blog-prabhupada/blog/">Блог</HeaderLink>
