--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -53,12 +53,13 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 		</style>
 	</head>
+
 	<body>
 		<Header />
 		<main>
 			<article>
 				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={`/new-blog-prabhupada/${heroImage}`} alt="" />}
+					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
 				</div>
 				<div class="prose">
 					<div class="title">
