финиш сделал блог на сегодня

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/new-blog-prabhupada/">{SITE_TITLE}</a></h2>
+		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/new-blog-prabhupada/">Главная</HeaderLink>
-			<HeaderLink href="/new-blog-prabhupada/blog/">Блог</HeaderLink>
-			<HeaderLink href="/new-blog-prabhupada/about/">О авторе</HeaderLink>
+			<HeaderLink href="/">Главная</HeaderLink>
+			<HeaderLink href="/blog/">Блог</HeaderLink>
+			<HeaderLink href="/about/">О авторе</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
