--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
+		<div class="hero-image">
+					<img width={360} height={210} src="../../public/Prabhupada_3.jpg" alt="Блог-Шрилы-Прабхупады" />
+				</div>
 			<h1>Добро пожаловать дорогой друг!</h1>
 			<p>
 			Если Вы здесь, значит у Вас есть очень важные вопросы:
@@ -27,7 +30,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</ul>
 			<p>
 				Шрила Прабхупада дас Вам ответ
-				</a> в нашем  <a href="/new-blog-prabhupada/blog">блоге</a>.
+				</a> в нашем  <a href="/blog/">блоге</a>.
 			</p>
 			<p>
 				Если, Вы не нашли ответа? Можете задать их в чате <a
