--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 		<main>
 		<div class="hero-image">
-					<img width={360} height={210} src="../../public/Prabhupada_3.jpg" alt="Блог-Шрилы-Прабхупады" />
+					<img width={360} height={210} src="/Prabhupada_3.jpg" alt="Блог-Шрилы-Прабхупады" />
 				</div>
 			<h1>Добро пожаловать дорогой друг!</h1>
 			<p>
@@ -34,7 +34,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</p>
 			<p>
 				Если, Вы не нашли ответа? Можете задать их в чате <a
-					href="https://github.com/Charca/astro-blog-template"
+					href="https://t.me/otvetprabhubady"
 					>Telegram
 				</a> или <a href="mailto:prabhupada-blog@gmail.com"> на почту</a>.
 			</p>
