--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>И многие другие вопросы...</code></li>
 			</ul>
 			<p>
-				Шрила Прабхупада дас Вам ответ
+				Шрила Прабхупада отвечает на вопросы здравомыслящих людей
 				</a> в нашем  <a href="/blog/">блоге</a>.
 			</p>
 			<p>
