--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,8 +58,10 @@ h6 {
 	color: rgb(var(--black));
 	line-height: 1.2;
 }
+@media  (max-width: 720em) {
 h1 {
-	font-size: 3.052em;
+	font-size: 1em;
+}
 }
 h2 {
 	font-size: 2.441em;
@@ -67,9 +69,13 @@ h2 {
 h3 {
 	font-size: 1.953em;
 }
-h4 {
-	font-size: 1.563em;
+
+@media  (max-width: 720em) {
+	h4 {
+	font-size: 1em;
 }
+}
+
 h5 {
 	font-size: 1.25em;
 }
@@ -133,6 +139,11 @@ hr {
 	main {
 		padding: 1em;
 	}
+}
+@media  (max-width: 720em) {
+.date {
+	font-size: 1rem;
+}
 }
 
 .sr-only {
