--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Главная</HeaderLink>
 			<HeaderLink href="/blog/">Новости</HeaderLink>
-			<HeaderLink href="/about/">О авторе</HeaderLink>
+			<HeaderLink href="/about/">Об авторе</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://t.me/otvetprabhubady" target="_blank">
