--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,12 +20,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<p>
 			Если Вы здесь, значит у Вас есть очень важные вопросы:
 			</p>
-			<p>Такие как:</p>
 			<ul>
 				<li>Для чего Я живу?</li>
 				<li>Где живет Бог?</li>
 				<li>Почему я страдаю?</li>
-				<li>Куда уходят люди когда умерают?</li>
+				<li>Куда уходят люди когда умирают?</li>
 				<li>И многие другие вопросы...</code></li>
 			</ul>
 			<p>
