--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,12 +3,39 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import type { Post } from '../../types/payload-types';
+import ky from 'ky';
 
-const posts = (await getCollection('blog')).sort(
-  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+type Props = Post;
+
+export const getServerData = async () => {
+  const posts: Post[] = await ky.get('http://localhost:3000/api/posts').json();
+  return { props: { posts } };
+};
+
+const blog = ({ posts }: { posts: Post[] }) => {
+  // Сортировка постов по дате публикации
+  return posts.sort((a, b) =>
+    (a.createdAt || '') < (b.publishedAt || '') ? 1 : -1
+  );
+};
+
+export async function getStaticPaths() {
+  const posts: Post[] = await ky.get('http://localhost:3000/api/posts').json();
+  //const posts = await getCollection('blog');
+  return posts.map((post) => ({
+    params: {
+      slug: post.slug,
+      image: post.meta?.image?.url,
+      title: post.title,
+      publishedAt: post.publishedAt,
+    },
+    props: post,
+  }));
+}
+
+const post = Astro.props;
 ---
 
 <!doctype html>
@@ -91,22 +118,27 @@ const posts = (await getCollection('blog')).sort(
       <section>
         <ul>
           {
-            posts.map((post) => (
+            (
               <li>
                 <a href={`/blog/${post.slug}/`}>
-                  <img
-                    width={720}
-                    height={360}
-                    src={post.data.heroImage}
-                    alt=""
-                  />
-                  <h4 class="title">{post.data.title}</h4>
-                  <p class="date">
-                    <FormattedDate date={post.data.pubDate} />
-                  </p>
+                  {post.meta?.image?.url && (
+                    <img
+                      width={720}
+                      height={360}
+                      src={post.meta?.image.url}
+                      alt=""
+                    />
+                  )}
+
+                  <h4 class="title">{post.title}</h4>
+                  {post.publishedAt && (
+                    <div class="date">
+                      <FormattedDate date={new Date(post.publishedAt)} />
+                    </div>
+                  )}
                 </a>
               </li>
-            ))
+            )
           }
         </ul>
       </section>
