--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -9,7 +9,7 @@ import type { Post } from '../types/payload-types';
 type Props = Post;
 
 // const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
-const { title, hero, publishedAt } = Astro.props;
+const { title, publishedAt } = Astro.props;
 ---
 
 <html lang="en">
