--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Debug } from "astro:components";
 import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
@@ -14,7 +15,7 @@ export const getServerData = async () => {
   return { props: { posts } };
 };
 
-const blog = ({ posts }: { posts: Post[] }) => {
+const blogSort = ({ posts }: { posts: Post[] }) => {
   // Сортировка постов по дате публикации
   return posts.sort((a, b) =>
     (a.createdAt || '') < (b.publishedAt || '') ? 1 : -1
