--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,20 +1,19 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
-import type { Post } from '../types/payload-types';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
+import type { Post } from "../types/payload-types";
 
 type Props = Post;
 
-// const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
-const { title, publishedAt } = Astro.props;
+const { title, publishedAt, hero, meta } = Astro.props;
 ---
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={'123'} />
+    <BaseHead title={title} description={"123"} />
     <style>
       main {
         width: calc(100% - 2em);
@@ -60,7 +59,16 @@ const { title, publishedAt } = Astro.props;
     <main>
       <article>
         <div class="hero-image">
-          <!-- {hero && <img width={1020} height={510} src={heroImage} alt="" />} -->
+          {
+            hero && (
+              <img
+                width={meta?.image?.width}
+                height={meta?.image?.height}
+                src={meta?.image?.url}
+                alt=""
+              />
+            )
+          }
         </div>
         <div class="prose">
           <div class="title">
@@ -80,6 +88,9 @@ const { title, publishedAt } = Astro.props;
 						} -->
             <h1>{title}</h1>
             <hr />
+            <div>
+              {hero.richText.map((arr) => `${arr.children[0].text}`)}
+            </div>
           </div>
           <slot />
         </div>
